fixed speaker's picture spacing on single speaker template

--- a/src/sass/templates/_single-speaker.scss
+++ b/src/sass/templates/_single-speaker.scss
@@ -26,7 +26,7 @@
 		img {
 			border: 10px solid #1e5fb4;
 			border-radius: 50%;
-			margin: 100px auto;
+			// margin: 100px auto;
 		}
 	}
 
